force-app/main/default/objects/Leave_Request__c/Leave_Request__c.object-meta.xml
<CustomObject>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LR-{000}</displayFormat>
        <label>Leave Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>