force-app/main/default/objects/Leave_Request__c/fields/No_of_leave_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_leave_Days__c</fullName>
    <formula>IF(DATEVALUE(Start_Date__c )== DATEVALUE( End_Date__c ),  
  IF(ROUND((TIMEVALUE(  End_Date__c ) -  TIMEVALUE( Start_Date__c ) ) / (1000 * 60 * 60), 2)  &lt;= 4 , 0.5, 1) , 
    IF(ROUND((TIMEVALUE(  End_Date__c ) -  TIMEVALUE( Start_Date__c ) ) / (1000 * 60 * 60), 2)  &lt;= 4 , 
(DATEVALUE( End_Date__c  )- DATEVALUE(  Start_Date__c )) + 0.5, 
(DATEVALUE( End_Date__c  )- DATEVALUE(  Start_Date__c ))+1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of leave Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>