force-app/main/default/objects/Leave_Request__c/fields/No_of_Remaining_leaves__c.field-meta.xml
<CustomField>
    <fullName>No_of_Remaining_leaves__c</fullName>
    <formula>Contact__r.Account.Annual_Leave__c -  Contact__r.Total_Numbers_Of_Leave_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Remaining leaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>