force-app/main/default/objects/Leave_Request__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY()) + &apos; 04:30:00&apos;)</defaultValue>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>