force-app/main/default/objects/Leave_Request__c/validationRules/restrictDate.validationRule-meta.xml
<ValidationRule>
    <fullName>restrictDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MONTH( DATEVALUE( Start_Date__c ) ) &lt;  MONTH(TODAY()),MONTH( DATEVALUE(  End_Date__c  ) ) &lt;  MONTH(TODAY()))</errorConditionFormula>
    <errorMessage>You can&apos;t apply leave for previous months</errorMessage>
</ValidationRule>