force-app/main/default/objects/Leave_Request__c/listViews/Management_Queue_Leave_Request.listView-meta.xml
<ListView>
    <fullName>Management_Queue_Leave_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Management Queue</label>
    <queue>Management_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>